tests/chapter_17/invalid_types/pointer_conversions/convert_ulong_to_void_ptr.c
int main(void) {
  unsigned LONG64 x = 0;
  void *v = x; // can't implicitly convert a non-pointer type to a pointer
}